rename test package and fix entity